# vector-db-ivf

./: Cargo.toml  README.md
benches/: search_bench.rs
src/: lib.rs  main.rs
src/index/: ivf.rs
