[package]
name = "seli-vector-db"
version = "0.1.2"
edition = "2024"
description = "A simple vector database in Rust using an IVF index for approximate nearest neighbor search"
license = "MIT OR Apache-2.0"
authors = ["selithrarion <werre8788@gmail.com>"]

[dependencies]
bincode = "2.0.1"
rand = "0.9.2"
anyhow = "1.0"
thiserror = "2.0.17"
wide = "1.0.2"

[dev-dependencies]
criterion = "0.8.0"
hnsw = "0.11.0"
space = "0.17.0"

[[bench]]
name = "search_bench"
harness = false
